create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3307,10 +3307,21 @@ body {
 .cid-r6QbOePrQy .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6ybmG6CAi {
-  padding-top: 120px;
+.cid-r6QfBGX7tp {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfBGX7tp H2 {
+  color: #ffffff;
+}
+.cid-r6QfCe7qbx {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfCe7qbx H2 {
+  color: #ffffff;
 }
 .cid-r6hk0HtDja {
   padding-top: 75px;
@@ -3992,10 +4003,21 @@ body {
 .cid-r6QbGMsSL0 .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6ybc6wNI7 {
-  padding-top: 120px;
+.cid-r6QfwbDyCS {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfwbDyCS H2 {
+  color: #ffffff;
+}
+.cid-r6Qfx36eap {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qfx36eap H2 {
+  color: #ffffff;
 }
 .cid-r6JWd79Wee {
   padding-top: 15px;
@@ -5174,10 +5196,21 @@ body {
 .cid-r6QbT5rK2D .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6ybEqrfwP {
-  padding-top: 120px;
+.cid-r6QfMYdPT0 {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfMYdPT0 H2 {
+  color: #ffffff;
+}
+.cid-r6QfMoYTY9 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfMoYTY9 H2 {
+  color: #ffffff;
 }
 .cid-r6FxYcMbFN {
   padding-top: 90px;
@@ -5659,10 +5692,21 @@ body {
 .cid-r6QbQFxR7D .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6zFIJD3CJ {
-  padding-top: 120px;
+.cid-r6QfFWP5mD {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfFWP5mD H2 {
+  color: #ffffff;
+}
+.cid-r6QfGv3iFP {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfGv3iFP H2 {
+  color: #ffffff;
 }
 .cid-r6Kn4tulQw {
   padding-top: 75px;
@@ -6231,7 +6275,7 @@ body {
   color: #19ca0f !important;
 }
 .cid-r6FFv0tZCG {
-  padding-top: 60px;
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
 }
@@ -7591,10 +7635,21 @@ body {
 .cid-r6QcoiNFzz .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6LKoLVM7W {
-  padding-top: 120px;
+.cid-r6QfR6Kv8I {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfR6Kv8I H2 {
+  color: #ffffff;
+}
+.cid-r6QfQyNf2D {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfQyNf2D H2 {
+  color: #ffffff;
 }
 .cid-r6LN5FPDQQ {
   padding-top: 30px;
@@ -8034,10 +8089,21 @@ body {
 .cid-r6QclYIMfh .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6LNszsEzV {
-  padding-top: 120px;
+.cid-r6QfTU8grH {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfTU8grH H2 {
+  color: #ffffff;
+}
+.cid-r6QfUrywo6 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfUrywo6 H2 {
+  color: #ffffff;
 }
 .cid-r6LNsAaUJu {
   padding-top: 30px;
@@ -8477,10 +8543,21 @@ body {
 .cid-r6QckGgEe3 .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6LNQclt8z {
-  padding-top: 120px;
+.cid-r6QfXBAuze {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QfXBAuze H2 {
+  color: #ffffff;
+}
+.cid-r6QfY5IGWV {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QfY5IGWV H2 {
+  color: #ffffff;
 }
 .cid-r6LNQcXHJF {
   padding-top: 30px;
@@ -8920,10 +8997,21 @@ body {
 .cid-r6QcjfPqmv .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6LPryrx6o {
-  padding-top: 120px;
+.cid-r6Qg1DHjC4 {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6Qg1DHjC4 H2 {
+  color: #ffffff;
+}
+.cid-r6Qg1dnaJU {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qg1dnaJU H2 {
+  color: #ffffff;
 }
 .cid-r6LPrz5kbG {
   padding-top: 30px;
@@ -9363,10 +9451,21 @@ body {
 .cid-r6QchO73fI .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6PqcQaYbz {
-  padding-top: 120px;
+.cid-r6Qg4II7iO {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6Qg4II7iO H2 {
+  color: #ffffff;
+}
+.cid-r6Qg5aNSzT {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qg5aNSzT H2 {
+  color: #ffffff;
 }
 .cid-r6PqcQML7n {
   padding-top: 30px;
@@ -9806,10 +9905,21 @@ body {
 .cid-r6QcgwgspH .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6PqlJfgmk {
-  padding-top: 120px;
+.cid-r6Qg8n0nlW {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6Qg8n0nlW H2 {
+  color: #ffffff;
+}
+.cid-r6Qg8VJ3Mq {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qg8VJ3Mq H2 {
+  color: #ffffff;
 }
 .cid-r6PqlJOBI3 {
   padding-top: 30px;
@@ -10249,10 +10359,21 @@ body {
 .cid-r6Qcf2H2CT .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6PqtbXkRV {
-  padding-top: 120px;
+.cid-r6QgbRhhrm {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QgbRhhrm H2 {
+  color: #ffffff;
+}
+.cid-r6QgcjdbV6 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6QgcjdbV6 H2 {
+  color: #ffffff;
 }
 .cid-r6PqtcvnWI {
   padding-top: 30px;
@@ -10692,10 +10813,21 @@ body {
 .cid-r6QcdzTxhC .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6PqzfVDNz {
-  padding-top: 120px;
+.cid-r6QgeW9ZBr {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QgeW9ZBr H2 {
+  color: #ffffff;
+}
+.cid-r6Qgfj6dvK {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qgfj6dvK H2 {
+  color: #ffffff;
 }
 .cid-r6Pqzgyq7Z {
   padding-top: 30px;
@@ -11135,10 +11267,21 @@ body {
 .cid-r6Qccc7Uur .dropdown-item:hover {
   color: #19ca0f !important;
 }
-.cid-r6PqGo9meY {
-  padding-top: 120px;
+.cid-r6QgitsG48 {
+  padding-top: 45px;
   padding-bottom: 0px;
   background-color: #1ea416;
+}
+.cid-r6QgitsG48 H2 {
+  color: #ffffff;
+}
+.cid-r6Qgi0WlvI {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6Qgi0WlvI H2 {
+  color: #ffffff;
 }
 .cid-r6PqGoNJVx {
   padding-top: 30px;
