create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1964,6 +1964,24 @@ body {
 .cid-r6KfG3f36g .item-name B {
   color: #000000;
 }
+.cid-r6QrlAQhTm {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6QrlAQhTm .mbr-text,
+.cid-r6QrlAQhTm blockquote {
+  color: #767676;
+}
+.cid-r6QrlAQhTm .mbr-text P {
+  text-align: center;
+  color: #000000;
+}
+.cid-r6Qqb1uVSJ {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
 .cid-r6yc14mR1g {
   padding-top: 30px;
   padding-bottom: 0px;
