create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6426,6 +6426,9 @@ body {
 .cid-r6FFIarWS3 .mbr-section-subtitle B {
   color: #000000;
 }
+.cid-r6FFIarWS3 B {
+  color: #000000;
+}
 .cid-r6FH50J1ww {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -6510,6 +6513,9 @@ body {
   color: #1ea416;
 }
 .cid-r6FH50J1ww .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-r6FH50J1ww B {
   color: #000000;
 }
 .cid-r6LMAltEPI {
@@ -6598,6 +6604,9 @@ body {
 .cid-r6LMAltEPI .mbr-section-subtitle B {
   color: #000000;
 }
+.cid-r6LMAltEPI B {
+  color: #000000;
+}
 .cid-r6FHrnUaDb {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -6682,6 +6691,9 @@ body {
   color: #1ea416;
 }
 .cid-r6FHrnUaDb .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-r6FHrnUaDb B {
   color: #000000;
 }
 .cid-r6FHrW2s5h {
@@ -6770,6 +6782,9 @@ body {
 .cid-r6FHrW2s5h .mbr-section-subtitle B {
   color: #000000;
 }
+.cid-r6FHrW2s5h B {
+  color: #000000;
+}
 .cid-r6FHsC7cQ9 {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -6854,6 +6869,9 @@ body {
   color: #1ea416;
 }
 .cid-r6FHsC7cQ9 .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-r6FHsC7cQ9 B {
   color: #000000;
 }
 .cid-r6FHt8YLaj {
@@ -6942,6 +6960,9 @@ body {
 .cid-r6FHt8YLaj .mbr-section-subtitle B {
   color: #000000;
 }
+.cid-r6FHt8YLaj B {
+  color: #000000;
+}
 .cid-r6FHFjq7zc {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -7028,9 +7049,12 @@ body {
 .cid-r6FHFjq7zc .mbr-section-subtitle B {
   color: #000000;
 }
+.cid-r6FHFjq7zc B {
+  color: #000000;
+}
 .cid-r6FHGdcNDj {
   padding-top: 15px;
-  padding-bottom: 60px;
+  padding-bottom: 75px;
   background-color: #ffffff;
 }
 .cid-r6FHGdcNDj p {
@@ -7112,6 +7136,9 @@ body {
   color: #1ea416;
 }
 .cid-r6FHGdcNDj .mbr-section-subtitle B {
+  color: #000000;
+}
+.cid-r6FHGdcNDj B {
   color: #000000;
 }
 .cid-r6FFv9zDQ5 {
