--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6340,35 +6340,35 @@ body {
 .cid-r6FFv1ETCS H2 {
   color: #ffffff;
 }
-.cid-r6FFIarWS3 {
-  padding-top: 15px;
+.cid-r6ReckBYWp {
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-r6FFIarWS3 p {
+.cid-r6ReckBYWp p {
   color: #767676;
 }
-.cid-r6FFIarWS3 .mbr-section-subtitle {
+.cid-r6ReckBYWp .mbr-section-subtitle {
   color: #000000;
   text-align: left;
 }
-.cid-r6FFIarWS3 .accordion-content {
+.cid-r6ReckBYWp .accordion-content {
   flex-basis: 100%;
   -webkit-flex-basis: 100%;
 }
-.cid-r6FFIarWS3 .panel-group {
+.cid-r6ReckBYWp .panel-group {
   width: 100%;
 }
-.cid-r6FFIarWS3 .card {
+.cid-r6ReckBYWp .card {
   border-radius: 0px;
   margin-bottom: -1px;
 }
-.cid-r6FFIarWS3 .card .card-header {
+.cid-r6ReckBYWp .card .card-header {
   border-radius: 0px;
   border: 0px;
   padding: 0;
 }
-.cid-r6FFIarWS3 .card .card-header a.panel-title {
+.cid-r6ReckBYWp .card .card-header a.panel-title {
   margin-bottom: 0;
   font-style: normal;
   font-weight: 500;
@@ -6377,34 +6377,34 @@ body {
   margin-top: -1px;
   line-height: normal;
 }
-.cid-r6FFIarWS3 .card .card-header a.panel-title:focus {
+.cid-r6ReckBYWp .card .card-header a.panel-title:focus {
   text-decoration: none !important;
 }
-.cid-r6FFIarWS3 .card .card-header a.panel-title h4 {
+.cid-r6ReckBYWp .card .card-header a.panel-title h4 {
   padding: 1.3rem 2rem;
   border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-r6FFIarWS3 .card .card-header a.panel-title h4 .sign {
+.cid-r6ReckBYWp .card .card-header a.panel-title h4 .sign {
   padding-right: 1rem;
 }
-.cid-r6FFIarWS3 .mbr-figure {
+.cid-r6ReckBYWp .mbr-figure {
   -webkit-align-self: flex-start;
   align-self: flex-start;
   padding-left: 4rem;
   padding-left: 0;
   padding-right: 4rem;
 }
-.cid-r6FFIarWS3 .media-container-row {
+.cid-r6ReckBYWp .media-container-row {
   -webkit-flex-direction: row-reverse;
   flex-direction: row-reverse;
 }
 @media (max-width: 991px) {
-  .cid-r6FFIarWS3 .media-container-row {
+  .cid-r6ReckBYWp .media-container-row {
     -webkit-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
-  .cid-r6FFIarWS3 .mbr-figure {
+  .cid-r6ReckBYWp .mbr-figure {
     padding-right: 0;
     padding-left: 0;
     padding-top: 2rem;
@@ -6412,110 +6412,18 @@ body {
     padding-bottom: 2rem;
   }
 }
-.cid-r6FFIarWS3 H4 {
+.cid-r6ReckBYWp H4 {
   text-align: center;
   color: #000000;
 }
-.cid-r6FFIarWS3 .panel-text {
+.cid-r6ReckBYWp .panel-text {
   color: #000000;
 }
-.cid-r6FFIarWS3 H2 {
-  text-align: left;
-  color: #000000;
-}
-.cid-r6FFIarWS3 .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FFIarWS3 B {
-  color: #000000;
-}
-.cid-r6FH50J1ww {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6FH50J1ww p {
-  color: #767676;
-}
-.cid-r6FH50J1ww .mbr-section-subtitle {
-  color: #000000;
-  text-align: left;
-}
-.cid-r6FH50J1ww .accordion-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-r6FH50J1ww .panel-group {
-  width: 100%;
-}
-.cid-r6FH50J1ww .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-r6FH50J1ww .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-r6FH50J1ww .card .card-header a.panel-title {
-  margin-bottom: 0;
-  font-style: normal;
-  font-weight: 500;
-  display: block;
-  text-decoration: none !important;
-  margin-top: -1px;
-  line-height: normal;
-}
-.cid-r6FH50J1ww .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-r6FH50J1ww .card .card-header a.panel-title h4 {
-  padding: 1.3rem 2rem;
-  border: 1px solid #dfdfdf;
-  margin-bottom: 0;
-}
-.cid-r6FH50J1ww .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-r6FH50J1ww .mbr-figure {
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-left: 4rem;
-  padding-left: 0;
-  padding-right: 4rem;
-}
-.cid-r6FH50J1ww .media-container-row {
-  -webkit-flex-direction: row-reverse;
-  flex-direction: row-reverse;
-}
-@media (max-width: 991px) {
-  .cid-r6FH50J1ww .media-container-row {
-    -webkit-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-  .cid-r6FH50J1ww .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-top: 2rem;
-    padding-top: 0;
-    padding-bottom: 2rem;
-  }
-}
-.cid-r6FH50J1ww H4 {
-  text-align: center;
-  color: #000000;
-}
-.cid-r6FH50J1ww .panel-text {
-  color: #000000;
-}
-.cid-r6FH50J1ww H2 {
+.cid-r6ReckBYWp H2 {
   text-align: left;
   color: #1ea416;
 }
-.cid-r6FH50J1ww .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FH50J1ww B {
+.cid-r6ReckBYWp .mbr-section-subtitle B {
   color: #000000;
 }
 .cid-r6LMAltEPI {
@@ -6599,12 +6507,95 @@ body {
 }
 .cid-r6LMAltEPI H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6LMAltEPI .mbr-section-subtitle B {
   color: #000000;
 }
-.cid-r6LMAltEPI B {
+.cid-r6Reeow9up {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6Reeow9up p {
+  color: #767676;
+}
+.cid-r6Reeow9up .mbr-section-subtitle {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6Reeow9up .accordion-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-r6Reeow9up .panel-group {
+  width: 100%;
+}
+.cid-r6Reeow9up .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-r6Reeow9up .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-r6Reeow9up .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-r6Reeow9up .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-r6Reeow9up .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-r6Reeow9up .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-r6Reeow9up .mbr-figure {
+  -webkit-align-self: flex-start;
+  align-self: flex-start;
+  padding-left: 4rem;
+  padding-left: 0;
+  padding-right: 4rem;
+}
+.cid-r6Reeow9up .media-container-row {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+@media (max-width: 991px) {
+  .cid-r6Reeow9up .media-container-row {
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+  .cid-r6Reeow9up .mbr-figure {
+    padding-right: 0;
+    padding-left: 0;
+    padding-top: 2rem;
+    padding-top: 0;
+    padding-bottom: 2rem;
+  }
+}
+.cid-r6Reeow9up H4 {
+  text-align: center;
+  color: #000000;
+}
+.cid-r6Reeow9up .panel-text {
+  color: #000000;
+}
+.cid-r6Reeow9up H2 {
+  text-align: left;
+  color: #1ea416;
+}
+.cid-r6Reeow9up .mbr-section-subtitle B {
   color: #000000;
 }
 .cid-r6FHrnUaDb {
@@ -6688,12 +6679,9 @@ body {
 }
 .cid-r6FHrnUaDb H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHrnUaDb .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHrnUaDb B {
   color: #000000;
 }
 .cid-r6FHrW2s5h {
@@ -6777,12 +6765,9 @@ body {
 }
 .cid-r6FHrW2s5h H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHrW2s5h .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHrW2s5h B {
   color: #000000;
 }
 .cid-r6FHsC7cQ9 {
@@ -6866,12 +6851,9 @@ body {
 }
 .cid-r6FHsC7cQ9 H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHsC7cQ9 .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHsC7cQ9 B {
   color: #000000;
 }
 .cid-r6FHt8YLaj {
@@ -6955,12 +6937,9 @@ body {
 }
 .cid-r6FHt8YLaj H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHt8YLaj .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHt8YLaj B {
   color: #000000;
 }
 .cid-r6FHFjq7zc {
@@ -7044,12 +7023,9 @@ body {
 }
 .cid-r6FHFjq7zc H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHFjq7zc .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHFjq7zc B {
   color: #000000;
 }
 .cid-r6FHGdcNDj {
@@ -7133,12 +7109,9 @@ body {
 }
 .cid-r6FHGdcNDj H2 {
   text-align: left;
-  color: #000000;
+  color: #1ea416;
 }
 .cid-r6FHGdcNDj .mbr-section-subtitle B {
-  color: #000000;
-}
-.cid-r6FHGdcNDj B {
   color: #000000;
 }
 .cid-r6FFv9zDQ5 {
