--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2934,6 +2934,129 @@ body {
 .cid-r6hlxI09WX B {
   color: #000000;
 }
+.cid-r6WzJKqBK0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6WzJKqBK0 .card-box {
+  padding: 0 2rem;
+}
+.cid-r6WzJKqBK0 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-r6WzJKqBK0 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-r6WzJKqBK0 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-r6WzJKqBK0 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-r6WzJKqBK0 .mbr-text {
+  color: #767676;
+}
+.cid-r6WzJKqBK0 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-r6WzJKqBK0 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-r6WAvXTc0y {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6WAvXTc0y .card-box {
+  padding: 0 2rem;
+}
+.cid-r6WAvXTc0y .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-r6WAvXTc0y .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-r6WAvXTc0y h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-r6WAvXTc0y p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-r6WAvXTc0y .mbr-text {
+  color: #767676;
+}
+.cid-r6WAvXTc0y .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-r6WAvXTc0y .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-r6WAwHZMZ9 {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-r6WAwHZMZ9 .card-box {
+  padding: 0 2rem;
+}
+.cid-r6WAwHZMZ9 .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-r6WAwHZMZ9 .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-r6WAwHZMZ9 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-r6WAwHZMZ9 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-r6WAwHZMZ9 .mbr-text {
+  color: #767676;
+}
+.cid-r6WAwHZMZ9 .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-r6WAwHZMZ9 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
 .cid-r6KBBLH8Pt {
   padding-top: 30px;
   padding-bottom: 30px;
